<resources>
    <string name="app_name">H21-4204N6-KickMyB-Viens-Choquette</string>
    <string name="drawerOpen">Close</string>
    <string name="drawerClose">Open</string>

    <!--connection-->
    <string name="con_text">Enter your information below to connect</string>
    <string name="con_connection_button">LOGIN</string>

    <!--signup-->
    <string name="signup_text">Enter your information below to register</string>
    <string name="signup_back">BACK</string>

    <!--sign up & connection-->
    <string name="con_user_hint">Username</string>
    <string name="con_password_hint">Password</string>
    <string name="con_signup_button">SIGN UP</string>
    <string name="con_con_title">Please wait.</string>
    <string name="con_con_message">Connecting to the server, this can take some time.</string>

    <!--sign up & connection errors-->
    <string name="con_error_wrong_id">Wrong username or password</string>
    <string name="con_error_invalid_signup">Username already taken or passwords not the same</string>
    <string name="con_error_connection">Can\'t connect to server. Check internet connection</string>

    <!--Acceuil-->
    <string name="acc_title">Home</string>
    <string name="acc_text">Welcome to the home page.\nYou can see everything from here.</string>
    <string name="acc_logout">LOGOUT</string>
    <string name="acc_add">ADD</string>

    <!--Ajout-->
    <string name="aj_title">Add</string>
    <string name="aj_text">Add page. Here, you can add a task.</string>
    <string name="aj_task_name">Name of the task</string>

    <!--Tache preview-->
    <string name="task_name">Activity:</string>
    <string name="task_limit">Issue Date:</string>
    <string name="task_progress">Progress:</string>
    <string name="task_time">Time passed:</string>

    <!--Tache consultation-->
    <string name="task_title">Consultation</string>
    <string name="task_new_progress">New percentage</string>
    <string name="task_change_button">CHANGE THE PERCENTAGE</string>
    <string name="task_error_null_info">One or many information recived are null</string>
    <string name="task_error_progress_change">An error has occurred when changing the progress</string>

    <!--Erreure Toast-->
    <string name="toast_Err_logoff_request">An error occurred while disconnecting</string>
    <string name="toast_Err_general">An error has occurend with the request</string>
    <string name="toast_Err_list_refresh">An error has occurend when refreshing the list</string>
    <string name="toast_Err_name_taken">Error, the name exist already</string>

    <!--Place holders-->
    <string name="placeholder_name">Name</string>

    <!--log off-->
    <string name="logoff_message">You have been successfully logged off</string>

    <!--updating info-->
    <string name="info_updating">Fetching information from server</string>
    <string name="info_uploading">Uploading information to the server</string>
</resources>